--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
+  
   <head>
     <title>Quiz: Unique Presidents</title>
     <meta name="viewport" content="width=device-width">
